objects/Receipt__c.object
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RCPT-{0000}</displayFormat>
        <label>Receipt</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Receipts</relationshipLabel>
        <relationshipName>Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_ID__c</fullName>
        <label>Receipt ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Pay__c</fullName>
        <label>Mode of Pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>offline</fullName>
                </value>
                <value>
                    <fullName>online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Paid_Date__c</fullName>
        <label>Amount Paid Date</label>
        <type>Date</type>
    </fields>
</CustomObject>